--- a/views/booking_categories_management.js.erb
+++ b/views/booking_categories_management.js.erb
@@ -73,6 +73,11 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
       });
       <% end %>
 
+      $('#show_stock_detail').bind('click', function(){
+        $('#stock_detail_container').toggle('slow');
+      });
+
+
 
     },
   
