--- a/views/_booking_management_detail.erb
+++ b/views/_booking_management_detail.erb
@@ -22,7 +22,13 @@
                         <tbody class="table-tbody">
                           <%% for (var lineIdx=0; lineIdx < entity.booking_lines.length; lineIdx++) { %>
                             <tr class="table-row">
-                               <td class="table-cell left_text"><span style="display:none"><%%=entity.booking_lines[lineIdx].item_id%> - </span><%%= entity.booking_lines[lineIdx].item_description %> <span class="booking-line-item-id ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=entity.booking_lines[lineIdx].item_id%>" data-value-quantity="<%%=entity.booking_lines[lineIdx].quantity%>" data-value-price="<%%=new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2)%>"></span></td>
+                               <td class="table-cell left_text"><span style="display:none"><%%=entity.booking_lines[lineIdx].item_id%> - </span><%%= entity.booking_lines[lineIdx].item_description %> <span class="booking-line-item-id ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=entity.booking_lines[lineIdx].item_id%>" data-value-quantity="<%%=entity.booking_lines[lineIdx].quantity%>" data-value-price="<%%=new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2)%>"></span>
+                                <% if booking_item_family.category_supplement_1 or
+                                      booking_item_family.category_supplement_2 or
+                                      booking_item_family.category_supplement_3 %>
+                                  <span class="booking-line-category-supplements ui-icon ui-icon-calculator edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value-cost-1="<%%=entity.booking_lines[lineIdx].category_supplement_1_unit_cost%>" data-value-cost-2="<%%=entity.booking_lines[lineIdx].category_supplement_2_unit_cost%>" data-value-cost-3="<%%=entity.booking_lines[lineIdx].category_supplement_3_unit_cost%>"></span>
+                                <% end %> 
+                               </td>
                                <td class="table-cell right_text"><%%= entity.days %></td>                               
                                <td class="table-cell right_text"><%%= entity.booking_lines[lineIdx].quantity %> <% if booking_item_family.multiple_items? %><span class="booking-line-quantity ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=entity.booking_lines[lineIdx].quantity%>"></span><% end %></td>
                                <td class="table-cell right_text"><%%if(entity.booking_lines[lineIdx].item_unit_cost != entity.booking_lines[lineIdx].item_unit_cost_base){%><span class="smaller_text less_constrast_text" style="text-decoration:line-through"><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost_base).toFixed(2) %>&nbsp;</span><%%}%><%%= new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2) %> <span class="booking-line-unit-cost ui-icon ui-icon-pencil edit-icon" data-id="<%%=entity.booking_lines[lineIdx].id%>" data-value="<%%=new Number(entity.booking_lines[lineIdx].item_unit_cost).toFixed(2)%>" ></span></td>
@@ -56,7 +62,8 @@
                                <td class="table-cell"></td>
                                <td class="table-cell"></td>
                                <td class="table-cell right_text"><strong><%%= new Number(entity.extras_cost).toFixed(2) %></strong></td>
-                            </tr>           
+                            </tr>
+
 
                           <%% if (entity.time_from_cost > 0 ) { %>
                           <tr class="table-row">
@@ -135,6 +142,78 @@
                             <td class="table-cell"></td>
                             <td class="table-cell right_text"><%%= new Number(entity.driver_age_deposit).toFixed(2) %> </td>
                           </tr>
+                          <%% } %>
+
+                          <% if booking_item_family.category_supplement_1 %>
+                            <%% if (entity.category_supplement_1_cost > 0 ) { %>
+                            <tr class="table-row">
+                              <td class="table-cell uppercase_text"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['category_supplement_1'] %></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell right_text"><%%= new Number(entity.category_supplement_1_cost).toFixed(2) %> </td>
+                            </tr>                          
+                            <%% } %>
+                          <% end %>
+
+                          <% if booking_item_family.category_supplement_2 %>
+                            <%% if (entity.category_supplement_2_cost > 0 ) { %>
+                            <tr class="table-row">
+                              <td class="table-cell uppercase_text"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['category_supplement_2'] %></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell right_text"><%%= new Number(entity.category_supplement_2_cost).toFixed(2) %> </td>
+                            </tr>                          
+                            <%% } %>
+                          <% end %>
+                          
+                          <% if booking_item_family.category_supplement_3 %>
+                            <%% if (entity.category_supplement_3_cost > 0 ) { %>
+                            <tr class="table-row">
+                              <td class="table-cell uppercase_text"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['category_supplement_3'] %></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell"></td>
+                              <td class="table-cell right_text"><%%= new Number(entity.category_supplement_3_cost).toFixed(2) %> </td>
+                            </tr>                          
+                            <%% } %>
+                          <% end %>
+
+                          <%% if (entity.supplement_1_cost > 0 ) { %>
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['supplement_1'] %></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell right_text"><%%= new Number(entity.supplement_1_cost).toFixed(2) %> </td>
+                          </tr>                          
+                          <%% } %>                          
+
+                          <%% if (entity.supplement_2_cost > 0 ) { %>
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['supplement_2'] %></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell right_text"><%%= new Number(entity.supplement_2_cost).toFixed(2) %> </td>
+                          </tr>                          
+                          <%% } %> 
+
+                          <%% if (entity.supplement_3_cost > 0 ) { %>
+                          <tr class="table-row">
+                            <td class="table-cell uppercase_text"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[booking_item_family.business_type.to_s]['supplement_3'] %></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell"></td>
+                            <td class="table-cell right_text"><%%= new Number(entity.supplement_3_cost).toFixed(2) %> </td>
+                          </tr>                          
                           <%% } %>
 
                            <tr class="table-row success">
